# nanocc

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  README_CN.md  pyproject.toml  structure.md
docs/: cowork-boundary.md  plan-tui-upgrade.md  progress.md
src/nanocc/: __init__.py  __main__.py  constants.py  context.py  engine.py  messages.py  query.py  types.py
src/nanocc/agents/: coordinator.py  fork.py
src/nanocc/assistant/: brief.py  mode.py  proactive.py
src/nanocc/cli/: app.py  commands.py
src/nanocc/compact/: auto_compact.py  micro_compact.py  post_compact.py  tool_result_budget.py
src/nanocc/hooks/: builtins.py  engine.py  types.py
src/nanocc/mcp/: client.py  config.py  tool_wrapper.py
src/nanocc/memory/: auto_dream.py  claude_md.py  daily_log.py  extract.py  memdir.py  session_memory.py
src/nanocc/providers/: anthropic.py  base.py  openai_compat.py  registry.py
src/nanocc/skills/: executor.py  loader.py
src/nanocc/skills/bundled/: commit.md
src/nanocc/tools/: agent_tool.py  ask_user.py  base.py  bash.py  file_edit.py  file_read.py  file_write.py  glob_tool.py  grep_tool.py  orchestration.py  registry.py  skill_tool.py  web_fetch.py
src/nanocc/utils/: abort.py  config.py  cost.py  git.py  session_storage.py  tokens.py
tests/: conftest.py  test_agents.py  test_assistant.py  test_compact.py  test_context.py  test_engine.py  test_hooks.py  test_mcp.py  test_memory.py  test_messages.py  test_query.py  test_session_persistence.py  test_skills.py  test_tools.py  test_types.py  test_utils.py
