[project]
name = "nanocc"
version = "0.1.0"
description = "Python Nano Claude Code - Agent SDK + CLI"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
    "anthropic>=0.40.0",
    "rich>=13.0",
    "click>=8.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0",
    "openai>=2.30.0",
    "prompt-toolkit>=3.0.40",
]

[project.optional-dependencies]
openai = ["openai>=1.50.0", "tiktoken>=0.7.0"]
telegram = ["python-telegram-bot>=21.0"]
websocket = ["websockets>=12.0"]
all = [
    "openai>=1.50.0",
    "tiktoken>=0.7.0",
    "python-telegram-bot>=21.0",
    "websockets>=12.0",
]
dev = ["pytest>=8.0", "pytest-asyncio>=0.24"]

[project.scripts]
nanocc = "nanocc.cli.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nanocc"]
